--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <script type="text/javascript" src="Scripts/endingGood.js"></script>
         <script type="text/javascript" src="Scripts/testScene.js"></script>
         <script type="text/javascript" src="Scripts/game.js"></script>
+        <script>
+            document.head.requestFullscreen();
+        </script>
     </head>
     <body>
     </body>
